force-app/main/default/objects/RelacionMensajeBienvenida__mdt/RelacionMensajeBienvenida__mdt.object-meta.xml
<CustomObject>
    <description>Almacena la relación entre los números de teléfono posibles y las URLs y nombres de los ScreenFlows (Argumentarios) y el mensaje de bienvenida a aplicar en cada caso</description>
    <label>Relacion Mensaje Bienvenida</label>
    <pluralLabel>Relaciones Mensajes Bienvenida</pluralLabel>
</CustomObject>