force-app/main/default/objects/RelacionMensajeBienvenida__mdt/fields/CampanaInboundIVR__c.field-meta.xml
<CustomField>
    <fullName>CampanaInboundIVR__c</fullName>
    <description>Código de la campaña del marcador que viene como entrante. Puede ser por transferencia o por llamada directa de cliente, por lo que se usa este campo en lugar del DNIS para saber el argumentario</description>
    <label>Campaña Inbound (VR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>