force-app/main/default/objects/RelacionMensajeBienvenida__mdt/fields/Medio__c.field-meta.xml
<CustomField>
    <fullName>Medio__c</fullName>
    <description>Campo Medio del objeto campaign member.</description>
    <label>Medio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefono</fullName>
                <default>true</default>
                <label>Telefono</label>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>BBDD</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Corregistros</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>RRSS</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>BBDD 2</fullName>
            </value>
            <value>
                <fullName>BLECIS</fullName>
            </value>
            <value>
                <fullName>PRÉSTAMOS</fullName>
            </value>
            <value>
                <fullName>Referencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>