force-app/main/default/objects/RelacionMensajeBienvenida__mdt/fields/MensajeBienvenida__c.field-meta.xml
<CustomField>
    <fullName>MensajeBienvenida__c</fullName>
    <description>Variable que almacena los mensajes de bienvenida</description>
    <label>Mensaje Bienvenida</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>