force-app/main/default/objects/RelacionMensajeBienvenida__mdt/fields/ScreenFlow_URL__c.field-meta.xml
<CustomField>
    <fullName>ScreenFlow_URL__c</fullName>
    <description>Campo de Tipo texo que guarda la URL de un argumentario</description>
    <label>ScreenFlow URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>