force-app/main/default/objects/RelacionMensajeBienvenida__mdt/fields/ScreenFlowName__c.field-meta.xml
<CustomField>
    <fullName>ScreenFlowName__c</fullName>
    <description>Variable que almacena el nombre de un ScreenFlow</description>
    <label>Nombre ScreenFlow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>